freesia/manifests/temporis/thanos-bucket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-bucket
  labels:
    app.kubernetes.io/name: thanos-bucket
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos-bucket
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos-bucket
    spec:
      containers:
      - name: thanos-bucket
        image: "quay.io/thanos/thanos:REPLACE_HERE"
        imagePullPolicy: IfNotPresent
        args:
        - tools
        - bucket
        - web
        - --log.level=info
        - --http-address=0.0.0.0:8080
        - --objstore.config-file=/etc/config/object-store.yaml
        - --refresh=30m
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
          readOnly: true
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 1000m
            memory: 128Mi
      volumes:
      - name: config-volume
        secret:
          secretName: "thanos-bucket-config"
