freesia/manifests/temporis/thanos-bucket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-bucket
  labels:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: bucket

spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: bucket
